# amr_ws

./: README.md  frames_2025-02-10_17.11.12.gv  frames_2025-02-14_22.28.55.gv
src/amr_big_two_description/: package.xml  setup.cfg  setup.py
src/amr_big_two_description/config/: navi.rviz  new_rviz.rviz
src/amr_big_two_description/launch/: display.launch.py  gazebo.launch.py  my_world.launch.py
src/amr_big_two_description/meshes/: base_link.stl  cam_v1_1.stl  part2_v2_1.stl  part3_v1_1.stl  part4_v2_1.stl  part4_v2__1__1.stl  part5_v1_1.stl  part5_v1__1__1.stl  part5_v1__2__1.stl  part5_v1__3__1.stl  part7_v1_1.stl  part7_v1__1__1.stl  part7_v1__2__1.stl  part7_v1__3__1.stl
src/amr_big_two_description/urdf/: amr_big_two.gazebo  amr_big_two.trans  amr_big_two.xacro  depth_cam.xacro  diff_dr.xacro  materials.xacro  model.sdf
src/amr_big_two_description/world/: new.world
src/cartographer_slam/config/: cartographer.lua
src/cartographer_slam/launch/: cartographer.launch.py
src/navigation/: CMakeLists.txt  package.xml
src/navigation/config/: ekf.yaml  params.yaml
src/navigation/launch/: bringup.launch.py  bringup_real_robo.launch.py  navigation.launch.py  static_tf.launch.py  wd_world.launch.py
src/navigation/map/: first_map.pgm  first_map.yaml  mp102.pgm  mp102.yaml  nv2_map.pgm  nv2_map.yaml  nv3_map.pgm  nv3_map.yaml  nv_map.pgm  nv_map.yaml
src/navigation/scripts/: robot_runner_single_goal.cpp  tf_pub.cpp
src/navigation/worlds/: new5_world.world
src/ros2_laser_scan_merger/config/: params.yaml
src/ros2_laser_scan_merger/rviz/: ros2_laser_scan_merge.rviz
